--- a/민휘/freelec-springboot2-webservice/build.gradle
+++ b/민휘/freelec-springboot2-webservice/build.gradle
@@ -20,8 +20,27 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.16'
     annotationProcessor 'org.projectlombok:lombok:1.18.16'
 
+    testCompileOnly 'org.projectlombok:lombok'
+    testAnnotationProcessor 'org.projectlombok:lombok'
+
+    // test
     testImplementation 'org.junit.jupiter:junit-jupiter-api'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+
+    // h2
+    implementation 'com.h2database:h2:1.4.197'
+
+    // jpa
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+    // 객체 유효성 검증
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+    // logger
+    implementation('org.slf4j:jcl-over-slf4j')
+    implementation('ch.qos.logback:logback-classic')
+
+
 }
 
 tasks.named('test') {
