--- a/민휘/freelec-springboot2-webservice/build.gradle
+++ b/민휘/freelec-springboot2-webservice/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.springframework.boot' version '2.7.4'
+    id 'org.springframework.boot' version '2.6.7'
     id 'io.spring.dependency-management' version '1.0.14.RELEASE'
     id 'java'
 }
@@ -40,6 +40,8 @@ dependencies {
     implementation('org.slf4j:jcl-over-slf4j')
     implementation('ch.qos.logback:logback-classic')
 
+    // mustache
+    implementation('org.springframework.boot:spring-boot-starter-mustache')
 
 }
 
