--- a/민휘/freelec-springboot2-webservice/build.gradle
+++ b/민휘/freelec-springboot2-webservice/build.gradle
@@ -43,6 +43,12 @@ dependencies {
     // mustache
     implementation('org.springframework.boot:spring-boot-starter-mustache')
 
+    // spring security
+    implementation('org.springframework.boot:spring-boot-starter-oauth2-client')
+    testImplementation('org.springframework.security:spring-security-test')
+
+    // session
+    implementation('org.springframework.session:spring-session-jdbc')
 }
 
 tasks.named('test') {
