[8장] mariadb 드라이버, 구동 환경 설정 파일 추가

--- a/Mingadingga/freelec-springboot2-webservice/build.gradle
+++ b/Mingadingga/freelec-springboot2-webservice/build.gradle
@@ -49,6 +49,9 @@ dependencies {
 
     // session
     implementation('org.springframework.session:spring-session-jdbc')
+
+    // mariadb
+    implementation('org.mariadb.jdbc:mariadb-java-client')
 }
 
 tasks.named('test') {
